--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>Jogo da Memória</h1>
             </header>
             <main>
-                <input type="text" placeholder="Digite seu nome" class="inputName">
+                <input type="text" placeholder="Digite seu nome" class="inputName" autofocus/>
             </main>
             <footer>
                 <button type="submit" class="newGameButton" disabled>Novo Jogo</button>
