--- a/pages/cards.html
+++ b/pages/cards.html
@@ -21,7 +21,7 @@
     <div class="container">
       <main>
         <aside>
-          <button>&lt; sair</button>
+          <button class="backButton">&lt; sair</button>
           <div class="datePlayer">
             <span class="playerName"></span>
             <span class="timer">00:00</span>
