add click and check cards

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             type="text"
             placeholder="Digite seu nome"
             class="inputName"
-            autofocus
+            autofocus required
           />
         </main>
         <footer>
