--- a/pages/rank.html
+++ b/pages/rank.html
@@ -14,32 +14,33 @@
       rel="stylesheet"
     />
     <title>Memory Game</title>
-    <link rel="stylesheet" href="./styles/newGame.css" />
-    <script src="./scripts/newGame.js" defer></script>
+    <link rel="stylesheet" href="../styles/rank.css" />
+    <script src="../scripts/rank.js" defer></script>
   </head>
   <body>
     <div class="container">
-      <form class="newGameForm">
-        <header class="newGameHeader">
-          <img src="./images/logo-reprograma-jucas.png" alt="" />
-          <h1>Jogo da Memória</h1>
-        </header>
-        <main>
-          <input
-            type="text"
-            placeholder="Digite seu nome"
-            class="inputName"
-            autofocus
-            required
-          />
-        </main>
-        <footer>
-          <button type="submit" class="newGameButton" disabled>
-            Novo Jogo
-          </button>
-          <button type="button" class="buttonRank">Rank</button>
-        </footer>
-      </form>
+      <aside>
+        <button class="backButton">&lt; voltar</button>
+      </aside>
+      <main>
+        <h1>Rank</h1>
+        <table class="tebleRank">
+          <thead>
+            <tr>
+              <th>N</th>
+              <th>Nome</th>
+              <th>Tempo</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Daniel Quintino</td>
+              <td>12:34</td>
+            </tr>
+          </tbody>
+        </table>
+      </main>
     </div>
   </body>
 </html>
