--- a/pages/rank.html
+++ b/pages/rank.html
@@ -24,7 +24,7 @@
       </aside>
       <main>
         <h1>Rank</h1>
-        <table class="tebleRank">
+        <table class="tableRank">
           <thead>
             <tr>
               <th>N</th>
