--- a/pages/cards.html
+++ b/pages/cards.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Jogo da memória com imagens de animes" />
     <meta name="author" content="Daniel Quintino" />
     <meta name="creator" content="Reprogama Jucás" />
-    <link rel="shortcut icon" href="./images/logo-rj.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo-rj.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
